Revert "(bug) Display name overflowing (#342)"
This reverts commit f37c1071df4e2d0ff12ad9327d5cf37c1eb06b05.

--- a/app/src/controllers/channels/channel.scss
+++ b/app/src/controllers/channels/channel.scss
@@ -173,7 +173,6 @@ minds-channel{
          letter-spacing: 1px;
          font-size: 28px;
          margin: 0;
-         word-break: break-all;
        }
        button{
           border:0;
